🔧 Fix: Remove unused scripting permission
- Removed 'scripting' permission from manifest.json
- Extension uses content_scripts instead of programmatic injection
- Fixes Chrome Web Store rejection (Violation: Use of Permissions)
- Extension functionality remains unchanged

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "description": "A minimal Chrome extension for translating selected text using Gemini and OpenRouter APIs",
   "permissions": [
     "storage",
-    "activeTab",
-    "scripting"
+    "activeTab"
   ],
   "host_permissions": [
     "https://generativelanguage.googleapis.com/*",
