✨ Update: Enhance extension functionality and UI
- Removed console logs from hot-reload.js and dark-mode.js for cleaner output.
- Updated manifest.json to include MyMemory API in the description and added content security policy.
- Introduced a comprehensive language mapping in background.js for better translation support.
- Added predefined themes for the translation popup in background.js.
- Improved CSS for the popup to support dynamic theming and enhanced visual consistency.
- Implemented theme detection in content.js to adapt the popup based on the webpage's theme.
- Enhanced error handling and user feedback in popup.js and options.js for better user experience.
- Added cache statistics management in options.js for improved performance monitoring.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Alto Translate",
   "version": "1.0.0",
-  "description": "A minimal Chrome extension for translating selected text using Gemini and OpenRouter APIs",
+  "description": "A minimal Chrome extension for translating selected text using Gemini, OpenRouter, and MyMemory APIs",
   "permissions": [
     "storage",
     "activeTab"
@@ -12,6 +12,9 @@
     "https://openrouter.ai/*",
     "https://api.mymemory.translated.net/*"
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://generativelanguage.googleapis.com https://openrouter.ai https://api.mymemory.translated.net;"
+  },
   "background": {
     "service_worker": "background/background.js"
   },
